# free-genai-bootcamp-2025

./: .gitignore  README.md
genai-architecting/: Readme.md  genai-architecture.drawio
homework-submissions/: preweek.md  week1.md
lang-portal/: backend-contract.yml  backend-technical-requirement.md
lang-portal/backend/: README.md  alembic.ini  pyproject.toml
lang-portal/backend/app/: main.py
lang-portal/backend/app/config/: database.py
lang-portal/backend/app/repositories/: base_repository.py
lang-portal/backend/app/schemas/: pagination_dto.py
lang-portal/backend/app/words/business/: base_fetch_paginated_words.py  base_fetch_word_details.py  base_words_fetcher.py  base_words_presenter.py  fetch_paginated_words.py  fetch_word_details.py  words_entities.py
lang-portal/backend/app/words/technical/: word_dbmodel.py  word_repository.py  words_controller.py  words_dependencies.py  words_dto.py  words_presenter.py  words_router.py
lang-portal/backend/database/alembic/: env.py
lang-portal/backend/database/alembic/versions/: .gitkeep  b7cfd536280f_initial_migration.py
sentence-constructor/: genAI-behaviors.md  prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md
sentence-constructor/chat-gpt/: default_prompt.md
