[project]
name = "backend"
version = "0.1.0"
authors = [
    { name = "Cyril Goasduff", email = "akayoshi514@gmail.com" },
]
description = "Language Portal Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
    "alembic>=1.12.0",
]
